Add Onetta Jones name and updated bio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jones for School Board - District 5</title>
+    <title>Onetta Jones for School Board - District 5</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="#" class="nav-brand">JONES</a>
+            <a href="#" class="nav-brand">ONETTA JONES</a>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#why-running">Why I'm Running</a></li>
@@ -30,7 +30,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1 class="hero-name">JONES</h1>
+                <h1 class="hero-name">ONETTA JONES</h1>
                 <p class="hero-office">FOR SCHOOL BOARD</p>
                 <div class="hero-divider"></div>
                 <p class="hero-district">MSCS District 5</p>
@@ -52,10 +52,10 @@
                         </div>
                     </div>
                     <div class="about-text">
-                        <h2>ABOUT</h2>
-                        <p>With over a decade of experience as an educator within Memphis-Shelby County Schools, I have dedicated my career to supporting students and teachers across our district.</p>
-                        <p>As both a teacher and substitute, I've had the unique opportunity to step inside classrooms across multiple schools, listen to educators, support students, and see firsthand what is working and where support is needed.</p>
-                        <p>My commitment to this district is both professional and personal—as an educator, a parent, and a grandparent with children currently enrolled in MSCS.</p>
+                        <h2>ABOUT ONETTA</h2>
+                        <p>Onetta Jones is an educator and advocate committed to ensuring every student in Memphis-Shelby County Schools—whether receiving special education services, on grade level, or enrolled in advanced coursework—has equal opportunity to succeed.</p>
+                        <p>She understands that student success is strongest when teachers are supported and parents are engaged, and she is committed to advocating for the resources, respect, and support educators need to teach effectively while partnering with families to strengthen student outcomes.</p>
+                        <p>Her focus is simple and unwavering: put children first and make sure every school has what students, teachers, and families need to thrive.</p>
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="footer-brand">JONES FOR SCHOOL BOARD</div>
+            <div class="footer-brand">ONETTA JONES FOR SCHOOL BOARD</div>
             <p class="footer-district">Memphis-Shelby County Schools &bull; District 5</p>
             <p class="footer-copy">&copy; 2025 Paid for by Jones for School Board</p>
         </div>
