Fix name: Vonetta Jones

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Onetta Jones for School Board - District 5</title>
+    <title>Vonetta Jones for School Board - District 5</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,7 +53,7 @@
                     </div>
                     <div class="about-text">
                         <h2>ABOUT ONETTA</h2>
-                        <p>Onetta Jones is an educator and advocate committed to ensuring every student in Memphis-Shelby County Schools—whether receiving special education services, on grade level, or enrolled in advanced coursework—has equal opportunity to succeed.</p>
+                        <p>Vonetta Jones is an educator and advocate committed to ensuring every student in Memphis-Shelby County Schools—whether receiving special education services, on grade level, or enrolled in advanced coursework—has equal opportunity to succeed.</p>
                         <p>She understands that student success is strongest when teachers are supported and parents are engaged, and she is committed to advocating for the resources, respect, and support educators need to teach effectively while partnering with families to strengthen student outcomes.</p>
                         <p>Her focus is simple and unwavering: put children first and make sure every school has what students, teachers, and families need to thrive.</p>
                     </div>
