Add Vonetta photo and fix name in About section

--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
             <div class="container">
                 <div class="about-content">
                     <div class="about-image">
-                        <div class="image-placeholder">
-                            <span>PHOTO<br>COMING SOON</span>
-                        </div>
+                        <img src="vonetta.png" alt="Vonetta Jones for School Board">
                     </div>
                     <div class="about-text">
-                        <h2>ABOUT ONETTA</h2>
+                        <h2>ABOUT VONETTA</h2>
                         <p>Vonetta Jones is an educator and advocate committed to ensuring every student in Memphis-Shelby County Schools—whether receiving special education services, on grade level, or enrolled in advanced coursework—has equal opportunity to succeed.</p>
                         <p>She understands that student success is strongest when teachers are supported and parents are engaged, and she is committed to advocating for the resources, respect, and support educators need to teach effectively while partnering with families to strengthen student outcomes.</p>
                         <p>Her focus is simple and unwavering: put children first and make sure every school has what students, teachers, and families need to thrive.</p>
