--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="#" class="nav-brand">ONETTA JONES</a>
+            <a href="#" class="nav-brand">VONETTA JONES</a>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#why-running">Why I'm Running</a></li>
@@ -30,7 +30,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1 class="hero-name">ONETTA JONES</h1>
+                <h1 class="hero-name">VONETTA JONES</h1>
                 <p class="hero-office">FOR SCHOOL BOARD</p>
                 <div class="hero-divider"></div>
                 <p class="hero-district">MSCS District 5</p>
@@ -114,7 +114,7 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="footer-brand">ONETTA JONES FOR SCHOOL BOARD</div>
+            <div class="footer-brand">VONETTA JONES FOR SCHOOL BOARD</div>
             <p class="footer-district">Memphis-Shelby County Schools &bull; District 5</p>
             <p class="footer-copy">&copy; 2025 Paid for by Jones for School Board</p>
         </div>
