Harris-style hero with full background image

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section class="hero" style="background-image: url('hero.png');">
             <div class="hero-content">
-                <h1 class="hero-name">VONETTA JONES</h1>
                 <p class="hero-office">FOR SCHOOL BOARD</p>
-                <div class="hero-divider"></div>
-                <p class="hero-district">MSCS District 5</p>
+                <h1 class="hero-name">VONETTA</h1>
+                <h1 class="hero-name hero-name-last">JONES</h1>
+                <a href="#contact" class="btn btn-hero">Get Involved</a>
             </div>
         </section>
 
