Harris-style mobile: text on top, full image below

--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
     </header>
 
     <main>
-        <section class="hero" style="background-image: url('hero.png');">
+        <section class="hero">
+            <div class="hero-bg" style="background-image: url('hero.png');"></div>
             <div class="hero-content">
                 <p class="hero-office">FOR SCHOOL BOARD</p>
                 <h1 class="hero-name">VONETTA</h1>
                 <h1 class="hero-name hero-name-last">JONES</h1>
                 <a href="#contact" class="btn btn-hero">Get Involved</a>
+            </div>
+            <div class="hero-image-mobile">
+                <img src="hero.png" alt="Vonetta Jones">
             </div>
         </section>
 
