Creative headers, serif fonts, no em dashes, Harris-style typography

--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
                         <img src="vonetta.png" alt="Vonetta Jones for School Board">
                     </div>
                     <div class="about-text">
-                        <h2>ABOUT VONETTA</h2>
-                        <p>Vonetta Jones is an educator and advocate committed to ensuring every student in Memphis-Shelby County Schools—whether receiving special education services, on grade level, or enrolled in advanced coursework—has equal opportunity to succeed.</p>
-                        <p>She understands that student success is strongest when teachers are supported and parents are engaged, and she is committed to advocating for the resources, respect, and support educators need to teach effectively while partnering with families to strengthen student outcomes.</p>
+                        <h2>Vonetta Jones fights for every child.</h2>
+                        <p>Vonetta Jones is an educator and advocate committed to ensuring every student in Memphis-Shelby County Schools has equal opportunity to succeed. Whether a student is receiving special education services, performing on grade level, or enrolled in advanced coursework, she believes every child deserves the same commitment to their future.</p>
+                        <p>She understands that student success is strongest when teachers are supported and parents are engaged. She is committed to advocating for the resources, respect, and support educators need to teach effectively while partnering with families to strengthen student outcomes.</p>
                         <p>Her focus is simple and unwavering: put children first and make sure every school has what students, teachers, and families need to thrive.</p>
+                        <a href="#why-running" class="text-link">More about Vonetta Jones</a>
                     </div>
                 </div>
             </div>
@@ -65,17 +66,17 @@
 
         <section id="why-running" class="section why-running">
             <div class="container">
-                <h2>WHY I'M RUNNING</h2>
+                <h2>Because every child deserves a champion.</h2>
                 <div class="why-content">
-                    <p class="lead">I am running because every child deserves to be seen, supported, and challenged—no exceptions.</p>
+                    <p class="lead">I am running because every child deserves to be seen, supported, and challenged. No exceptions.</p>
 
-                    <p>As an educator within Memphis-Shelby County Schools for more than a decade, I have seen the gaps that exist between schools, programs, and resources—and I believe those gaps can and must be closed. I have served the district as both a teacher and a substitute, which allowed me to step inside classrooms across multiple schools, listen to educators, support students, and see firsthand what is working and where support is needed.</p>
+                    <p>As an educator within Memphis-Shelby County Schools for more than a decade, I have seen the gaps that exist between schools, programs, and resources. I believe those gaps can and must be closed. I have served the district as both a teacher and a substitute, which allowed me to step inside classrooms across multiple schools, listen to educators, support students, and see firsthand what is working and where support is needed.</p>
 
                     <p>My commitment to this district is both professional and personal. I have had a former student graduate from the Shelby County School system, and today, my grandchildren are enrolled in Memphis-Shelby County Schools. I understand this system not only as an educator, but as a parent and grandparent who wants the very best for our children.</p>
 
-                    <p>Students with IEPs deserve strong support and dignity in learning. Students in AP and advanced classes deserve continued investment and opportunity. And every child in between deserves consistency, fairness, and high expectations—delivered by supported teachers and strengthened through meaningful family engagement.</p>
+                    <p>Students with IEPs deserve strong support and dignity in learning. Students in AP and advanced classes deserve continued investment and opportunity. And every child in between deserves consistency, fairness, and high expectations. That means supported teachers and meaningful family engagement.</p>
 
-                    <p>My commitment goes beyond District 5. I am running to advocate for policies and decisions that benefit all students across the Memphis-Shelby County School District by supporting educators, partnering with parents and families, and ensuring schools have the tools they need. Because when we put children first—every child, every school, every day—our entire community benefits.</p>
+                    <p>My commitment goes beyond District 5. I am running to advocate for policies and decisions that benefit all students across the Memphis-Shelby County School District by supporting educators, partnering with parents and families, and ensuring schools have the tools they need. Because when we put children first, every child, every school, every day, our entire community benefits.</p>
                 </div>
             </div>
         </section>
